--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
   "name": "Super Treino",
   "short_name": "SuperTreino",
+  "id": "/SuperTreino/",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#121212",
   "orientation": "portrait",
+  "scope": "./",
   "icons": [
     {
       "src": "icon.png",
