--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "Super Treino",
   "short_name": "SuperTreino",
   "id": "/SuperTreino/",
-  "start_url": "./index.html",
+  "start_url": "/SuperTreino/index.html",
+  "scope": "/SuperTreino/",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#121212",
   "orientation": "portrait",
-  "scope": "./",
   "icons": [
     {
       "src": "icon.png",
