--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,23 @@
   "name": "Super Treino",
   "short_name": "SuperTreino",
   "id": "/SuperTreino/",
-  "start_url": "/SuperTreino/index.html",
-  "scope": "/SuperTreino/",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#121212",
   "theme_color": "#121212",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon.jpg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     },
     {
-      "src": "icon.png",
+      "src": "icon.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ]
