--- a/manifest.json
+++ b/manifest.json
@@ -2,23 +2,23 @@
   "name": "Kine",
   "short_name": "Kine",
   "id": "/Kine/",
-  "start_url": "./index.html",
-  "scope": "./",
+  "start_url": "/Kine/index.html",
+  "scope": "/Kine/",
   "display": "standalone",
   "background_color": "#0a0a0a",
   "theme_color": "#0a0a0a",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon.jpg",
+      "src": "icon.png",
       "sizes": "192x192",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icon.jpg",
+      "src": "icon.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
