--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
   "name": "Kine",
   "short_name": "Kine",
-  "id": "/",
+  "id": ".",
   "start_url": "./index.html",
   "scope": "./",
   "display": "standalone",
   "background_color": "#18181b",
   "theme_color": "#18181b",
   "orientation": "portrait",
+  "description": "Seu treinador pessoal minimalista.",
   "icons": [
     {
       "src": "icon.png",
